# ctbox

./: .gitignore  Cargo.toml  README.md  main.py
.github/workflows/: CICD.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/cli/: config.rs  data.rs  entrance.rs  format.rs  mod.rs  network.rs
src/network/: encrypt.rs  entity.rs  login.rs  logout.rs  mod.rs  query.rs  util.rs
src/network/tests/: encrypt.rs
