[package]
name = "ctbox"
version = "1.3.0"
edition = "2021"
authors = ["XianYuHil <i@hhhil.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
confy = "0.6.1"
regex = "1.10.3"
reqwest = { version = "0.12.0", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
url = "2.5.0"
